Bug 416508: Fix a _MSC_VER typo in sha512.c, and use SEC_BEGIN_PROTOS and SEC_END_PROTOS in secport.h.  r=nelson