security/nss/lib/freebl/sha512.c
@@ -36,7 +36,7 @@
  * the terms of any one of the MPL, the GPL or the LGPL.
  *
  * ***** END LICENSE BLOCK ***** */
-/* $Id: sha512.c,v 1.9 2006-10-13 16:54:04 wtchang%redhat.com Exp $ */
+/* $Id: sha512.c,v 1.10 2008-02-14 18:41:37 wtc%google.com Exp $ */
 #include "prcpucfg.h"
 #if defined(_X86_) || defined(SHA_NO_LONG_LONG)
 #define NOUNROLL512 1
@@ -95,7 +95,7 @@ static const PRUint32 H256[8] = {
 
 #if defined(_MSC_VER) && defined(_X86_)
 #ifndef FORCEINLINE
-#if (MSC_VER >= 1200)
+#if (_MSC_VER >= 1200)
 #define FORCEINLINE __forceinline
 #else
 #define FORCEINLINE __inline
